# olieblind

./: .gitignore  README.md
infrastructure/: README.md
infrastructure/1_MySQL/: README.md  tables.sql
infrastructure/1_MySQL_Cluster/: README.md
infrastructure/2_Azure/: README.md  azure_script.sh  lifecycle-mysql.json
infrastructure/2_MySQL_Connection/: README.md
infrastructure/3_AkamaiVolume/: README.md
infrastructure/3_MySQL_Database/: README.md
infrastructure/4_AkamaiFirewall/: README.md
infrastructure/5_AkamaiLinode/: 000-olieblind-2-default-le-ssl.conf  000-olieblind-2-default.conf  000-olieblind-2-default_after_certbot.conf  README.md
infrastructure/6_GoogleCloud/: README.md
install/: README.md  createDirectories.sh  createLinks.sh  create_directories.sh  create_links.sh  olievortex.cron  sourceOlieBlind_template.sh  source_template.sh
scripts/deploy/: deploy.sh  deployOlieBlind.Api.sh  deployOlieBlind.Brown.sh  deployOlieBlind.Cli.sh  deployOlieBlind.Purple.sh  deployOlieBlind.Web.sh  deployOlieBlind.sh  deploy_git.sh  deploy_olievortex_purple.sh
scripts/mysql/: olieblind_backup.sh  olieblind_dev_backup.sh
scripts/start/: startOlieBlind.Api.sh  startOlieBlind.Cli.sh  startOlieBlind.Web.sh  start_api.sh  start_satelliterequest.sh  start_web.sh  stopOlieBlind.Api.sh  stopOlieBlind.Web.sh  stop_satelliterequest.sh
src/: .runsettings  olieblind.sln
src/olieblind.api/: Program.cs  README.md  appsettings.json  (+1 more)
src/olieblind.purple/: dataset_grib.py  main.py  prold2.py  pyproject.toml  shell_fedora.sh  shell_macos_dev.sh  shell_win_dev.bat
(+380 files in other folders)
