[project]
name = "olieblind-purple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-monitor-opentelemetry>=1.6.13",
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.0",
    "metpy>=1.7.0",
    "numpy>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "xarray>=2025.8.0",
]
